# cmake-getsysteminfo

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/: GetSystemInfo.cmake
config/: config.h.in
src/: main.c
